# grpc_ros_adapter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.cfg  setup.py
config/: params.yaml  server.yaml
cs_scripts/protobuf/: Common.cs  RemoteControl.cs  RemoteControlGrpc.cs  SensorStreaming.cs  SensorStreamingGrpc.cs
docker/: Dockerfile
grpc_ros_adapter/: msg_translator.py  server.py
grpc_ros_adapter/grpc_utils/: extensions.py  ros_handle.py  ros_publisher_registry.py  topic_streamer.py
grpc_ros_adapter/nav_callbacks/: nav_callbacks.py
grpc_ros_adapter/services/: acoustic_transmission.py  frame_service.py  lora_transmission.py  parameter_server.py  ping_service.py  remote_control.py  sensor_callbacks.py  sensor_streaming.py  service_caller.py  simulation_control.py  visualization.py
grpc_ros_adapter/utils/: extensions.py  ros_handle.py  ros_publisher_registry.py  ros_registry.py  topic_streamer.py
launch/: .launch_server.launch.swp  launch_bts_tutorial.launch  launch_server.launch  ros2_server_launch.py  server.launch
msg/: NanomodemPayload.msg  NanomodemRequest.msg
protobuf/: generate_command.txt
protos/: acoustic_transmission.proto  common.proto  navigation.proto  parameter_server.proto  ping.proto  remote_control.proto  sensor_data.proto  sensor_management.proto  sensor_streaming.proto  simulation.proto  simulation_control.proto  tf.proto
ros_adapter/: server.py
ros_adapter/services/: acoustic_transmission.py  frame_service.py  sensor_callbacks.py  sensor_streaming.py  service_caller.py  simulation_control.py
ros_adapter/utils/: extensions.py  ros_handle.py  ros_publisher_registry.py  topic_streamer.py
scripts/: client.py  msg_translator.py  server.py
scripts/navigation/: navigation_pb2.py  (+1 more)
src/: server_endpoint.py
tests/: node_test_helper.py  test_server.py  test_translator.py
utils/: dump_timestamps.py  merge_bags.py  reorder_bag.py
(+35 files in other folders)
