<?xml version="1.0"?>
<package format="3">
  <name>grpc_ros_adapter</name>
  <version>0.0.2</version>
  <description>The package provides a ROS to GRPC bridge.</description>

  <maintainer email="labust@fer.hr">Labust</maintainer>

  <license>Apache-2.0</license>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>uuv_sensor_msgs</exec_depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_python</build_type>
  </export>
</package>

